--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,25 +1,13 @@
 //
-html, body {
-  margin: 0;
-  padding: 0;
-}
-
-.interface {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-
-  input {
-  	width: 100%;
-  }
-}
+@import "layout";
 
 .refresh-btn {
-	margin-left: 8px;
+  margin-left: 8px;
 }
 
 .notebook {
-	border: 1px solid black;
-	margin: 1px;
-	padding: 1px;
+  border: 1px solid black;
+  margin: 1px;
+  padding: 1px;
 }
+
