Working on the interface layout a bit. Tried to get redux-form/settings to load the fields from the state, not working yet. I've added a menu on the notebooks page. From here you will be able to trigger syncronise. I've having a look at adding bottle/websocket to see if I can feed back updates to the react/web side when I'll do synchronisation

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,23 +1,4 @@
 //
 @import "layout";
-
-.refresh-btn {
-  margin-left: 8px;
-}
-
-.notebook {
-  border: 1px solid black;
-  margin: 1px;
-  padding: 1px;
-}
-
-.settings {
-
-	.field_row {
-		margin-top: 4px;
-	}
-
-	input {
-		width: 100%;
-	}
-}
+@import "notebooks";
+@import "settings";
