--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -15,12 +15,12 @@ html, body {
     padding: 0;
 
     ul {
-      margin-left: 0;
-      margin-left: 0;
-      padding-left: 0;
+      margin: 0;
+      padding: 0;
       list-style: none;
 
       li {
+        line-height: 40px;
       }
 
     }
