Reworking the Notebooks screen to add in selecting a notebook.

--- a/src/sass/notebooks.scss
+++ b/src/sass/notebooks.scss
@@ -9,7 +9,6 @@
   padding: 1px;
 }
 
-
 .notebook-menu {
   padding: 0;
   margin-bottom: 4px;
@@ -20,4 +19,8 @@
     font-weight: bold;
   }
 
+}
+
+.notebook-selected {
+  border: 1px solid black;
 }
