--- a/src/sass/notebooks.scss
+++ b/src/sass/notebooks.scss
@@ -1,5 +1,5 @@
 
-$selected-colour: #66dd67;
+$selected-colour: blue;
 
 $outline-colour: #cfcfcf;
 
@@ -38,12 +38,13 @@ $outline-colour: #cfcfcf;
   .heading {
     height: 10%;
     line-height: 40px;
+    margin-bottom: 4px;
   }
 
   .pages {
     height: 88%;
     overflow-y: scroll;
-    padding-top: 4px;
+    padding-top: 2px;
     border-top: 2px solid $selected-colour;
 
     .page {
